--- a/public/assets/css/soft-ui-dashboard.css
+++ b/public/assets/css/soft-ui-dashboard.css
@@ -24662,3 +24662,66 @@ pre[class*=language-] {
 .navbar-vertical .navbar-nav > .nav-item .nav-sublink.active .icon {
   background-image: linear-gradient(310deg, #e3e548 0%, #e3e548 100%);
 }
+
+/* CARD-PARTIDA */
+
+.cardpartida {
+  border: 1px solid rgba(130, 214, 22, 0.5); 
+  border-radius: 10px; 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+  background-color: rgba(130, 214, 22, 0.1); 
+  padding: 1rem; 
+  transition: transform 0.3s ease, box-shadow 0.3s ease; 
+}
+
+.cardpartida:hover {
+  transform: translateY(-5px); 
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2); 
+}
+
+.cardpartida-header {
+  background-color: #82d616; 
+  color: white; 
+  border-radius: 10px 10px 0 0; 
+  padding: 0.5rem; 
+  text-align: center; 
+}
+
+.cardpartida-header h1 {
+  font-size: 1.5rem; 
+  font-weight: bold; 
+  margin: 0.5rem 0; 
+}
+
+.cardpartida-header span {
+  display: inline-block;
+  background-color: white; 
+  opacity: 0.8;
+  color: #82d616; 
+  padding: 0.3rem 0.6rem; 
+  border-radius: 5px; 
+  font-size: 0.9rem; 
+  margin-top: 0.5rem; 
+
+}
+
+.cardpartida-body {
+  font-size: 0.9rem; 
+  color: #333; 
+  padding: 0.5rem; 
+}
+
+.cardpartida-body ul {
+  list-style: none; 
+  padding: 0; 
+  margin: 0; 
+}
+.cardpartida-body ul li {
+  padding: 0.2rem 0; 
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1); 
+}
+
+.cardpartida-body ul li:last-child {
+  border-bottom: none; 
+}
+
