--- a/resources/css/soft-ui-dashboard.css
+++ b/resources/css/soft-ui-dashboard.css
@@ -20193,7 +20193,7 @@ textarea.form-control-lg {
   border-radius: 0.5rem;
   border-top-left-radius: 0.5rem !important;
   border-bottom-left-radius: 0.5rem !important;
-  padding-left: 35px !important;
+  padding-left: 15px !important;
   border-left-width: 1px;
 }
 
@@ -24752,4 +24752,8 @@ pre[class*=language-] {
   align-items: center; /* Centrar verticalmente */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para resaltar */
   margin: 20px auto; /* Espaciado y centrado */
+}
+
+.form-control.custom-padding {
+  padding-left: 35px !important;
 }
