--- a/resources/css/soft-ui-dashboard.css
+++ b/resources/css/soft-ui-dashboard.css
@@ -5996,23 +5996,32 @@ textarea.form-control-lg {
 
 .modal-dialog {
   position: relative;
-  width: auto;
+  width: 100%;
   margin: 0.5rem;
   pointer-events: none;
 }
-.modal.fade .modal-dialog {
+/* pensar en agregar .modal-dialog.ofertas y .modal-dialog.pagos */
+
+.modal-dialog.ofertas, .modal-dialog.pagos {
+  position: relative;
+  width: 700px;
+  margin: 0.5rem;
+  pointer-events: none;
+}
+
+.modal.fade .modal-dialog, .modal.fade .modal-dialog.ofertas {
   transition: transform 0.3s ease-out;
   transform: translate(0, -50px);
 }
 @media (prefers-reduced-motion: reduce) {
-  .modal.fade .modal-dialog {
+  .modal.fade .modal-dialog, .modal.fade .modal-dialog.ofertas {
     transition: none;
   }
 }
-.modal.show .modal-dialog {
+.modal.show .modal-dialog, .modal.show .modal-dialog.ofertas {
   transform: none;
 }
-.modal.modal-static .modal-dialog {
+.modal.modal-static .modal-dialog, .modal.modal-static .modal-dialog.ofertas {
   transform: scale(1.02);
 }
 
@@ -6106,6 +6115,10 @@ textarea.form-control-lg {
 @media (min-width: 576px) {
   .modal-dialog {
     max-width: 500px;
+    margin: 1.75rem auto;
+  }
+  .modal-dialog.ofertas, .modal-dialog.pagos {
+    max-width: 700px;
     margin: 1.75rem auto;
   }
 
